# haskell

./: README.md  hiki.cabal
app/: EditPage.hs  EntryList.hs  Main.hs
data/: Fprog  Haskell  Hobbies
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: hiki-0.1.0.0-inplace.conf  package.cache
lib/Hiki/: Web.hs
static/: index.html  styles.css
test/: HikiTest.hs
